[metadata]
name = cdk_utils
version = file: version.txt
author = Met Office (Transport Tribe)
author_email = techsolutionsdeliverybgteam@metoffice.onmicrosoft.com
description =expected_parameter_keys  aws-utils library used to test aws infrastructure across all BG products
url = https://github.com/MetOffice/bg-aws-utils
[options]
packages = find:
package_dir= =src
install_requires =
    boto3
[options.packages.find]
where=src
