[metadata]
name = cdkutils
version = attr: cdkutils.__version__
author = Met Office (Transport Tribe)
author_email = techsolutionsdeliverybgteam@metoffice.onmicrosoft.com
description =cdk-utils library used with CDK to support the deployment of Transport Tribe applications.
url = https://github.com/MetOffice/bg-aws-utils
[options]
packages = find:
package_dir= =src
install_requires =
    aws-cdk.core>=1.108.1
    aws-cdk.aws-secretsmanager>=1.108.1
    aws-cdk.aws-ssm>=1.108.1
    aws-cdk.pipelines>=1.108.1
    boto3>=1.17.27
    pygit2>=1.6.0
[options.packages.find]
where=src

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = src/cdkutils/_version.py
versionfile_build = cdkutils/_version.py
tag_prefix =
parentdir_prefix =